<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/naming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:stateListAnimator="@animator/toolbar_evalation"
        android:text="@string/favor_title"
        android:textSize="@dimen/t_head_size"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#000"
        app:layout_constraintBottom_toBottomOf="@+id/second_box"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:paddingBottom="@dimen/list_padding"
        android:clipToPadding="false"
        android:layout_marginLeft="@dimen/note_list_margin"
        android:layout_marginRight="@dimen/note_list_margin"
        android:id="@+id/recyclerView"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>
