...
                android:layout_height="match_parent"
                android:textSize="@dimen/lider_line_text_size" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/secondBox"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
